--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -34,6 +34,8 @@ ru:
     Animals: "Животные"
     Procedure Types: "Виды процедур"
     Procedures: "Процедуры"
+    Pictures: "Фотографии"
+    Medical Procedures: "Медицинские назначения"
   activerecord:
     attributes:
       animal:
