--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -37,6 +37,7 @@ ru:
     Pictures: "Фотографии"
     Medical Procedures: "Медицинские назначения"
     Aviary: "Вольер"
+    Aviaries: "Вольеры"
   label: 
     Birthday: "Дата рождения"
     Age: "Возраст"
@@ -50,11 +51,11 @@ ru:
         arival_date: "Дата появления"
         from_people: "Кто привез"
         from_place: "Откуда"
-        birth_year: "Год рождения"
-        birth_month: "Месяц рождения"
+        birth_date: "Дата рождения"
         death_date: "Дата смерти"
         color: "Окрас"
         aviary: "Вольер"
+        section: "секция"
         description: "Общее описание"
         history: "История"
         graduation: "Выпуск"
