--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -96,4 +96,7 @@ ru:
       animals: "Животные"
       aviaries: "Вольеры"
       language: "Язык"
-
+  gender_lists:
+    "Неопределен": Неопределен
+    "М": М
+    "Ж": Ж
