--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -37,6 +37,8 @@ ru:
     Pictures: "Фотографии"
     Medical Procedures: "Медицинские назначения"
     Aviary: "Вольер"
+    Sections: "Секции"
+    Add Section: "Добавить секцию"
     Aviaries: "Вольеры"
     Add to Card: "Добавить в корзину"
     cart: "Корзина"
