add a button Add

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -51,6 +51,7 @@ en:
      submit: "Save"
      search: "Search"
      save: "Save"
+     add: "Add"
   gender_lists:
     "Unspecified": Unspecified
     "Male": Male
