--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -129,6 +129,7 @@ ru:
      clear: "Обнулить фильтры"
      cancel: "Отменить"
      save: "Сохранить"
+     add: "Добавить"
   menu:
     new: "Добавить"
     languages:
