--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -55,7 +55,7 @@ ru:
     Are you sure?: "Действительно удалить?"
     Notes: "Примечания"
     Group searching conditions by: "Группировать условия поиска с помощью"
-    To upload multiple images, click Choose Files and select all images at once: "Чтобы загрузить несколько изображений, нажмите Choose Files и выберите все изображения одновременно"
+    To upload multiple images, click Browse ... and select all images at once: "Чтобы загрузить несколько изображений, нажмите Browse ... и выберите все изображения одновременно"
     Uploaded Pictures: "Загруженные фотографии"
     Uploaded on: "Загружена"
     Animal Nickname contains: "Кличка содержит"
