адд енцлосурес то царт

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -37,6 +37,7 @@ en:
     Date: "Date"
     Select: "Select"
     Aviaries: "Enclosures"
+    Add To Enclosure: "Add To Enclosure"
   menu:
     languages:
       lang: "Language"
