--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -35,6 +35,7 @@ ru:
     Procedure Types: "Виды процедур"
     Procedures: "Процедуры"
     Pictures: "Фотографии"
+    Add To Enclosure: "Добавить в вольер"
     Medical Procedures: "Медицинские назначения"
     Medical Procedure: "Медицинское назначение"
     Aviary: "Вольер"
@@ -124,6 +125,7 @@ ru:
      edit: "Редактировать"
      submit: "Сохранить"
      delete: "Удалить"
+     delete from cart: "Удалить из корзины"
      back: "Назад к списку"
      search: "Найти"
      clear: "Обнулить фильтры"
