add enclosures to cart

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -36,8 +36,11 @@ en:
     To: "To"
     Date: "Date"
     Select: "Select"
+    Select Section: "Select"
     Aviaries: "Enclosures"
     Add To Enclosure: "Add To Enclosure"
+    section: "секция"
+    Citizens: "Citizens"
   menu:
     languages:
       lang: "Language"
@@ -50,6 +53,7 @@ en:
       animal:
         section: "section"
         aviary_id: "Enclosure"
+        section_id: "Section"
   forms:
     buttons:
      edit: "Edit"
