--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -30,7 +30,7 @@
 en:
   hello: "Hello world"
   text:
-    Add to Card: "Add to Card"
+    Add to Cart: "Add to Cart"
     Contains: "Contains"
     From: "From"
     To: "To"
