--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -43,7 +43,7 @@ ru:
     section: "секция"
     Add Section: "Добавить секцию"
     Aviaries: "Вольеры"
-    Add to Card: "Добавить в корзину"
+    Add to Cart: "Добавить в корзину"
     cart: "Корзина"
     Your cart is empty: "Корзина пуста"
     Medical procedures created: "Медицинские назначения созданы"
