add checkboxes to pictures

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -36,6 +36,7 @@ en:
     To: "To"
     Date: "Date"
     Select: "Select"
+    Select All: "Select All"
     Select Section: "Select"
     Aviaries: "Enclosures"
     Add To Enclosure: "Add To Enclosure"
