--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -54,6 +54,7 @@ ru:
     Editing: "Редактировать запись"
     New: "Новая запись"
     Select: "Выбрать"
+    Select All: "Выбрать все"
     Select Section: "Выбрать"
     Are you sure?: "Действительно удалить?"
     Notes: "Примечания"
