--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -105,6 +105,7 @@ ru:
         history: "История"
         graduation: "Выпуск"
         animal_type_id: "Вид"
+        animal_type: "Вид"
       animal_type:
         name: "Название"
       aviary:
