add translation to new forms

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -43,6 +43,10 @@ en:
     Add To Enclosure: "Add To Enclosure"
     section: "секция"
     Citizens: "Citizens"
+    Citizen: "Citizen"
+    Animal Type: "Animal Type"
+    Procedure Types: "Procedure Types"
+    New Medical Procedure: "New Medical Procedure"
   menu:
     languages:
       lang: "Language"
