add translation to edit forms

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -53,7 +53,9 @@ ru:
     From: "От"
     To: "До"
     Date: "Дата"
-    Editing: "Редактировать запись"
+    Editing: "Редактировать"
+    Editing Citizen: "Редактировать гражданина"
+    Editing Medical Procedure: "Редактировать медицинскую процедуру"
     New: "Новый"
     Select: "Выбрать"
     Select All: "Выбрать все"
