--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -47,6 +47,8 @@ en:
     Animal Type: "Animal Type"
     Procedure Types: "Procedure Types"
     New Medical Procedure: "New Medical Procedure"
+    Editing Citizen: "Editing Animal"
+    Editing Medical Procedure: "Editing Medical Procedure"
   menu:
     languages:
       lang: "Language"
