--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -49,6 +49,7 @@ en:
     New Medical Procedure: "New Medical Procedure"
     Editing Citizen: "Editing Animal"
     Editing Medical Procedure: "Editing Medical Procedure"
+    Lena Beresina's shelter: "Lena Beresina's shelter"
   menu:
     languages:
       lang: "Language"
