create language switch in header

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -53,7 +53,7 @@ en:
   menu:
     languages:
       lang: "Language"
-      ru: "Russian"
+      ru: "Русский"
       en: "English"
     header:
       aviaries: "Enclosures"
