--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -156,7 +156,7 @@ ru:
     new: "Добавить"
     languages:
       ru: "Русский"
-      en: "Английский"
+      en: "English"
     header:
       citizens: "Граждане"
       medicine: "Медицина"
