--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -97,6 +97,7 @@ ru:
     sort: "Сортировать"
     order: "Порядок"
     view: "Вид"
+    Search the Rest of Text Fields: "Поиск по остальным полям"
   activerecord:
     attributes:
       animal:
