--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -52,6 +52,7 @@ en:
     Lena Beresina's shelter: "Lena Beresina's shelter"
     table: "Table"
     pictures: "Pictures"
+    added to enclosure: "Added to Enclosure"
   label:
     sort: "Sort"
     order: "Order"
