--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -73,6 +73,7 @@ ru:
     Lena Beresina's shelter: "Питомник Лены Березиной"
     table: "Таблица"
     pictures: "Картинки"
+    added to enclosure: "Добавлены в вольер"
   helpers:
     page_entries_info:
       one_page:
