fix error message

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -80,6 +80,8 @@ en:
           any_present_message: "One of the following fileds should exist: nickname, surname, color, description, or arival_date"
         aviary:
           is_already_in_this_aviary: "is already in this enclosure"
+      messages:
+        blank: "hell"
   forms:
     buttons:
       edit: "Edit"
