--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -145,6 +145,8 @@ ru:
           any_present_message: "Одно из следующих полей должно быть заполнено: кличка, фамилия, окрас, описание, или дата появления"
         section:
           is_already_in_this_aviary: "уже есть в этом вольере"
+      messages:
+        blank: "- поле не может буть пустым"
   forms:
     messages:
       success: "Операция была успешно выполнена!"
