add only new records to cart

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -94,6 +94,8 @@ en:
     sort:
       asc: "Ascending"
       desc: "Descending"
+    messages: 
+    The cart has been updated with new records: "The cart has been updated with new records"
 
   gender_lists:
     "Unspecified": Unspecified
