fix some things

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -52,7 +52,7 @@ en:
     Lena Beresina's shelter: "Lena Beresina's shelter"
     table: "Table"
     pictures: "Pictures"
-    added to enclosure: "Added to Enclosure"
+    Added to enclosure: "Added to Enclosure"
     Are you sure?: "Are you sure?"
   label:
     sort: "Sort"
