--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -61,7 +61,7 @@ ru:
     Select Section: "Выбрать"
     Are you sure?: "Действительно удалить?"
     Notes: "Примечания"
-    Group searching conditions by: "Группировать условия поиска с помощью"
+    Group search by: "Группировать поиск"
     To upload multiple images, click Browse and select all images at once: "Чтобы загрузить несколько изображений, нажмите Browse ... и выберите все изображения одновременно"
     Uploaded Pictures: "Загруженные фотографии"
     Uploaded on: "Загружена"
