edit width of filters

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -65,7 +65,7 @@ ru:
     To upload multiple images, click Browse and select all images at once: "Чтобы загрузить несколько изображений, нажмите Browse ... и выберите все изображения одновременно"
     Uploaded Pictures: "Загруженные фотографии"
     Uploaded on: "Загружена"
-    Animal Nickname contains: "Кличка содержит"
+    Nickname contains: "Кличка содержит"
     citizens: "Граждане"
     Citizen: "Граждaнин"
     Animal Type: "вид граждан"
