add animal statuses

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -45,6 +45,7 @@ en:
     Citizens: "Citizens"
     Citizen: "Citizen"
     Animal Type: "Animal Type"
+    Animal Status: "Animal Status"
     Procedure Types: "Procedure Types"
     New Medical Procedure: "New Medical Procedure"
     Editing Citizen: "Editing Animal"
@@ -111,7 +112,7 @@ en:
       Enclosure was successfully updated: "Enclosure was successfully updated"
       Enclosure was successfully deleted: "Enclosure was successfully deleted"
       Medical procedures created: "Medical procedures created"
-      Аdded to enclosure: "Аdded to enclosure"
+      Added to enclosure: "Аdded to enclosure"
       Procedure type was successfully created: "Procedure type was successfully created"
       Procedure type was successfully updated: "Procedure type was successfully updated"
       Procedure type was successfully deleted: "Procedure type was successfully deleted"
