--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -74,6 +74,7 @@ ru:
     table: "Таблица"
     pictures: "Картинки"
     The default status cannot be removed: "Этот статус не может быть удален"
+    Start typing to search: "Начните печатать кличку для поиска"
   helpers:
     page_entries_info:
       one_page:
